deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dnd-dev
  labels:
    app.kubernetes.io/part-of: dndapp
    environment: dev
